--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -15,7 +15,9 @@
   <link rel="canonical" href="/privacy-policy" />
   <link rel="revision" href="/privacy-policy" />
   <title>Privacy Policy | gaus</title>
-  <style>@media screen and (max-width: 1025px) {.page__title {visibility: hidden; position: absolute;}}</style>
+  <style>
+    html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}article header{font-weight:600;text-align:right;padding:15px}article header a{padding:5px 10px;text-decoration:none;}article header a:visited{color:#000}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
+  </style>
 </head>
 
 <body class="layout-no-sidebars has-featured-top path-privacy-policy path-node page-node-type-page">
@@ -28,17 +30,9 @@
           </div>
         </div>
       </header>
-      <div class="l-featured-top">
-        <aside class="l-container section clearfix" role="complementary">
-          <div class="region region-featured-top">
-            <div id="block-bartok-page-title--2" class="block--bartok-page-title--2 block block--core block--page-title-block">
-              <div class="page__header">
-                <h1 class="page__title page-title">Privacy Policy</h1>
-              </div>
-            </div>
-          </div>
-        </aside>
-      </div>
+
+      <h1 class="page__title page-title visible-desktop">Privacy Policy</h1>
+
       <div id="main-wrapper" class="l-main-wrapper">
         <div id="main" class="l-main l-container clearfix">
           <main id="content" class="l-main-content column" role="main">
@@ -49,29 +43,32 @@
                     <header><span property="schema:name" content="Privacy Policy" class="rdf-meta hidden"></span></header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                        <p>Gaus Surahman built the DruPocket, Quotable, VIP Downloader for Instagram Photo Video, and other apps, created by me (from here on specified as <strong>my apps</strong>) and made them available as free and commercial
-                          apps. This SERVICE is provided by me and is intended for use as is.</p>
+                        <p>Gaus Surahman built the DruPocket, Quotable, VIP Downloader for Instagram Photo Video, and other apps, created by me (from here on specified as <strong>my apps</strong>) and made them available as free and commercial apps. This service is provided by me and is intended for use as is.</p>
                         <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
-                        <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or
-                          share your information with anyone except as described in this Privacy Policy.</p>
-                        <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at <strong>my apps</strong> unless otherwise defined in this Privacy Policy.</p>
-                        <p><strong>Information Collection and Use</strong></p>
-                        <p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to read phone state to play and stop the audio. And other
-                          permissions which are exposed for each particular app on the section <strong>About &gt; Disclaimer</strong>. The information that I request will be retained on your device and is not collected by me in any way.</p>
+                        <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
+
+                        <h2>Information Collection and Use</h2>
+                        <p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to read phone state to play and stop the audio. And other permissions which are exposed for each particular app on the section <strong>About &gt; Disclaimer</strong>.</p>
+
+                        <p>The information that I request will be retained on your device and is not collected by me in any way.</p>
+
                         <p>You will be asked for permissions before using any of my apps. Be sure to allow the required permissions when prompted as otherwise my apps may not function properly.</p>
-                        <p>My apps do use third party services that may collect information used to identify you.</p>
-                        <p>Link to privacy policy of third party service providers used by the app</p>
+                        <p>My apps do use third party analytic services that may collect information used to identify you.</p>
+
+                        <p>Link to privacy policy of third party service providers used by the app:</p>
+
                         <ul>
                           <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
                         </ul>
-                        <p><strong>Log Data</strong></p>
-                        <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such
-                          as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
-                        <p><strong>Cookies</strong></p>
+
+                        <h2>Log Data</h2>
+                        <p>I want to inform you that whenever you use my service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
+
+                        <h2>Cookies</h2>
                         <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
-                        <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or
-                          refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</p>
-                        <p><strong>Service Providers</strong></p>
+
+                        <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse their cookies, you may not be able to use some portions of this Service.</p>
+                        <h2>Service Providers</h2>
                         <p>I may employ third-party companies and individuals due to the following reasons:</p>
                         <ul>
                           <li>To facilitate our Service;</li>
@@ -79,22 +76,21 @@
                           <li>To perform Service-related services; or</li>
                           <li>To assist us in analyzing how our Service is used.</li>
                         </ul>
-                        <p>I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use
-                          the information for any other purpose.</p>
-                        <p><strong>Security</strong></p>
-                        <p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of
-                          electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
-                        <p><strong>Links to Other Sites</strong></p>
-                        <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the
-                          Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
-                        <p><strong>Children's Privacy</strong></p>
-                        <p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal
-                          information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary
-                          actions.</p>
-                        <p><strong>Changes to this Privacy Policy</strong></p>
-                        <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are
-                          effective immediately after they are posted on this page.</p>
-                        <p><strong>Contact Us</strong></p>
+                        <p>I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
+
+                        <h2>Security</h2>
+                        <p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
+
+                        <h2>Links to Other Sites</h2>
+                        <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
+
+                        <h2>Children's Privacy</h2>
+                        <p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13.</p>
+
+                        <h2>Changes to this Privacy Policy</h2>
+                        <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
+
+                        <h2>Contact Us</h2>
                         <p>If you have any question or suggestion about my Privacy Policy, do not hesitate to contact me.</p>
                       </div>
                     </div>
@@ -105,19 +101,8 @@
           </main>
         </div>
       </div>
-      <footer class="l-footer">
-        <div class="l-container">
-          <div class="l-footer__bottom">
-            <div class="region region-footer-fifth">
-              <div data-drupal-messages-fallback class="hidden"></div>
-              <div id="block-footercopyright--2" class="block--footercopyright--2 block block--block-content">
-                <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-                  <p>© 2008 gaus</a>.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <footer class="l-footer visible-desktop">
+        <p><small>© 2008 gaus</small></p>
       </footer>
     </div>
   </div>
