--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -71,32 +71,41 @@
                           </div>
                         </details>
                         <details>
-                          <summary>Details</summary>
+                          <summary>Data collection</summary>
                           <div>
-                            <p>The app just borrows your authorized eyes under the hood. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash
+                            <p>The app doesn't collect your social credentials, nor anything sensitive. It just borrows your authorized eyes under the hood. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash
                               reports (<b>About > Crash report</b>). If you don't submit it, no data is sent to us. You can also remove the submitted data on the email body before submission.</p>
                             <p>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, VIP Downloader version and flavor, Model, Device, Product, SDK, Screen density and resolution. These data
                               are generic to help troubleshoot and fix bugs. None is sensitive. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</p>
-                            <p>The VIP Downloader offers features such as adding and deleting pictures or videos.</p>
+                          </div>
+                        </details>
+
+                        <details>
+                          <summary>Permissions</summary>
+                            <div>
+                            <p>The VIP Downloader offers features such as adding and deleting pictures or videos, storing files at external removable storage.</p>
                             <p>These features need your permissions. Without these permissions the app is crippled:</p>
                             <ul>
-                              <li>INTERNET to download pictures, or videos. If you disallow, no videos or photos will show. The system may likely grant a little portion of this permission. This limited internet access may suffice. If however things
+                              <li>INTERNET to download pictures, or videos. The system may likely grant a little portion of this permission. This limited internet access may suffice. If however things
                                 do not function properly, be sure to enable the needed permissions.<br></li>
                               <li>READ_EXTERNAL_STORAGE/ WRITE_EXTERNAL_STORAGE to store photos and videos on your external SD card. None of your personal data is read or written/ overwritten.<br></li>
                               <li>MEDIA_CONTENT_CONTROL to play and stop the videos.<br></li>
                               <li>SET_WALLPAPER to set pictures or video covers as wallpapers.<br></li>
                               <li>CAMERA to add your own camera pictures into gallery.<br></li>
                             </ul>
-                            <p>They are only enabled on your own conscious approval. You will be asked for permissions before using this app. Also check out the <b>Settings > Permissions</b> to enable the rest. Again all is disabled by default until
-                              you enable it. If disallowed, they simply won't function. No hidden gimmicks.</p>
+                            <p>They are only enabled on your own conscious approval. You will be asked for permissions before using this app. Also check out the <b>Settings > Permissions</b> to enable the rest. Again all is disabled by default until you enable it. If disallowed, they simply won't function. No hidden gimmicks.</p>
+                            </div>
+                        </details>
+
+                        <details>
+                          <summary>Acknowledgement</summary>
+                            <div>
                             <p>The VIP Downloader strives to leverage Android architecture components goodness.</p>
                             <p>However it is at early stage, please bear in mind! It has not been battle-tested against million devices, yet. Should you find a bug or hiccup, please use the Feedback.</p>
-                            <p>I am <b>Gaus Surahman</b>, the VIP Downloader app developer, and this app is, not affiliated to Instagram company or any of these photos or videos providers, nor own them. I am not held responsible for any abuse or
-                              misuse of this app. It is your own responsibility to use, misuse, or abuse this app. The contents displayed in the application do not belong to me, or VIP Downloader. If however, you legal-proven 100% believe you find a
-                              copyrighted material, please contact me first, thank you, so I can resolve, or delete it for good.</p>
+                            <p>I am <b>Gaus Surahman</b>, the VIP Downloader app developer, and this app is, not affiliated to Instagram company or any of these photos or videos providers, nor own them. I am not held responsible for any abuse or misuse of this app. It is your own responsibility to use this app. The contents displayed in the application do not belong to me, or VIP Downloader. If however, you legal-proven 100% believe you find a copyrighted material, please contact me first, thank you, so I can resolve, or delete it for good.</p>
                             <p>By using this app, you acknowledge that you have read all of the above info properly. Should you have any question, please get in touch. Also check out the <b>About > Privacy policy</b> section for more related info.
                             </p>
-                          </div>
+                            </div>
                         </details>
 
                       </div>
